Timeline completed. Bug in range slider causes Chrome to crash Works on Firefox

--- a/src/css/timeline.css
+++ b/src/css/timeline.css
@@ -220,7 +220,7 @@
 }
 
 .channel-hover-info {
-  width: 80%;
+  width: 100%;
   height: 100%;
   position: absolute;
   display: flex;
@@ -234,32 +234,25 @@ s {
   font-size: 0.75rem;
 }
 
-.channel-hover-add {
-  position: absolute;
-  right: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 20%;
-  height: 100%;
-  transition: background-color 0.45s;
-}
-
-.channel-hover-add:hover {
-  background-color: #2e3c42;
-}
-
 .timeline-display-hover:hover {
   opacity: 0.85;
-  border: 1.5px solid #5bc0de;
-  border-radius: 2.5px;
-  cursor: pointer;
+  cursor: grab;
 }
 
 .channel-hover-remove {
+  cursor: pointer;
+  color: #e8ebe2;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: -0.25em;
+  right: -0.5em;
+  z-index: 100;
+}
+.channel-add-pattern {
+  cursor: pointer;
+  color: #e8ebe2;
+  z-index: 1;
+  position: absolute;
+  right: -12.5%;
 }
 
 .empty-channel {
