--- a/src/index.css
+++ b/src/index.css
@@ -38,4 +38,5 @@ strong {
 .display-pattern-container {
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
